Working on react frontend

--- a/react_frontend/src/main/resources/index.html
+++ b/react_frontend/src/main/resources/index.html
@@ -5,6 +5,6 @@
     <title>Facebook Live Tracker UI</title>
 </head>
 <body>
-<script src="live_tracker_frontend.js"></script>
+<script src="react_frontend.js"></script>
 </body>
 </html>
