--- a/frontend/src/main/resources/index.html
+++ b/frontend/src/main/resources/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Facebook Live Tracker UI</title>
 </head>
+<link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,700&display=swap"
+/>
 <body>
 <script src="frontend.js"></script>
 </body>
